# gemini-robotics-sdk

./: .gitignore  CMakeLists.txt  Dockerfile  PKG-INFO  README.md  RELEASE_NOTES_DOCKER.md  pyproject.toml  requirements.txt
cmake/: protobuf-generate.cmake  python-packaging.cmake  safari-targets.cmake
cmake/tests/: CMakeLists.txt  test.proto
examples/: __init__.py
examples/aloha/: actor.py  env.py  eval.py  requirements.txt  server.py  sim_eval.py
examples/aloha/agent/: run.py  simple_agent.py
examples/logging/: example_logger_usage.py  example_logger_usage_test.py  lerobot_data_conversion_script.py  sample_data_upload_script.py
examples/model/: gemini_robotics_aloha_eval_example.py  gemini_robotics_policy_example.py  genai_robotics_aloha_example.py  genai_robotics_example.py
examples/offline_eval/: README.md  mcap_loader.py  offline_eval.py  offline_eval_test.py  requirements.txt
safari_sdk/: __init__.py  _version.py  auth.py
safari_sdk/agent/framework/: agent_framework.py  config.py  flags.py  types.py
safari_sdk/agent/framework/agents/: agent.py
safari_sdk/agent/framework/comms/: external_controller.py
safari_sdk/agent/framework/eval/: agent_eval_binary.py  agent_eval_lib.py
safari_sdk/agent/framework/event_bus/: event_bus.py  event_stream_handler.py
safari_sdk/agent/framework/inference_handlers/: live_handler.py  nonstreaming_handler.py  unary_genai_handler.py
safari_sdk/agent/framework/prompts/: shared_prompts.py  system_prompt_builder.py
safari_sdk/agent/framework/tools/: fast_api_tools.py  genai_client.py  run_instruction_for_duration.py  run_instruction_until_done.py  success_detection.py
safari_sdk/agent/framework/ui/: default_ui.py  index.html  terminal_ui.py
safari_sdk/agent/framework/utils/: image_processing.py
safari_sdk/flywheel/: flywheel_cli.py  flywheel_cli_test.py  upload_data.py  upload_data_test.py
safari_sdk/logging/cc/: mcap.cpp
safari_sdk/logging/python/: constants.py  episodic_logger.py  episodic_logger_test.py  mcap_lerobot_logger.py  mcap_lerobot_logger_test.py  mcap_parser_utils.py  session_manager.py  session_manager_test.py  session_metadata.py  session_metadata_test.py  stream_logger.py  stream_logger_interface.py  stream_logger_test.py
safari_sdk/model/: constants.py  gemini_robotics_policy.py  gemini_robotics_policy_test.py  genai_robotics.py  genai_robotics_test.py  model_interface.py  observation_to_model_query_contents_test.py  remote_model_interface.py  remote_model_interface_test.py  thinking_manager.py  version_negotiation_e2e_test.py
safari_sdk/orchestrator/: example_client_sdk_integration.py  example_client_sdk_observer_mode.py  example_client_sdk_robot_and_operator_info.py  example_client_sdk_upload_log_file.py  example_update_hardware_config.py
safari_sdk/orchestrator/client/: interface.py  interface_test.py
safari_sdk/orchestrator/client/dataclass/: api_response.py  artifact.py  current_robot_info.py  current_robot_info_test.py  robot_event.py  robot_event_dataclass_test.py  robot_hardware_component.py  work_unit.py  work_unit_test.py
safari_sdk/orchestrator/client/libs/: artifact.py  artifact_lib_test.py  current_robot.py  current_robot_test.py  robot_event.py  robot_event_test.py  robot_job.py  robot_job_test.py  robot_job_work_unit.py  robot_job_work_unit_test.py  visual_overlay.py  visual_overlay_test.py
safari_sdk/orchestrator/helpers/: orchestrator_helper.py  orchestrator_helper_test.py
safari_sdk/protos/: fingers.proto
safari_sdk/protos/logging/: machine_info.proto
scripts/: build_wheel.sh  flywheel_integration_test.sh  setup_development_mode.sh  update_pip_dependencies.sh
