[project]
name = "safari_sdk"
description = "Safari SDK: the SDK for Google DeepMind Gemini Robotics models"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Safari SDKAuthors", email="safari-sdk-authors@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",  # EOL 2026-10
    "Programming Language :: Python :: 3.11",  # EOL 2027-10
    "Programming Language :: Python :: 3.12",  # EOL 2028-10
    "Programming Language :: Python :: 3.13",  # EOL 2029-10
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
  "absl-py",
  # Delete this backport dependency after dropping Python3.10
  # support. It is listed here to prevent the ;python_version
  # dependency specifier from being dropped from the requirements.txt
  # file when running the update script, as that would break
  # the requirements.txt file for Python > 3.10.
  "backports-asyncio-runner==1.2.0; python_version==\"3.10\"",
  "backports.strenum==1.3.1; python_version==\"3.10\"",
  # contourpy is a transitive dependency that drops Python 3.10
  # support in 1.3.3. The relevant lines can be removed when Python
  # 3.10 is EOL.
  "contourpy<=1.3.2",
  "dataclasses_json",
  "dm-env",
  "evdev; sys_platform != 'win32'",
  "fastapi",
  "gdm-robotics",
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-genai>=1.70.0",
  "grpcio",
  "imageio",
  "immutabledict",
  "jax",
  "lark~=1.2",
  "mcap-protobuf-support",
  "mediapy",
  "mujoco>=3.3.6",
  "opencv-python",
  "overrides",
  "protobuf<7",
  "psutil",
  "python-magic",
  "pytz",
  "scipy",
  "tensorflow",
  "uvicorn",
  "watchdog",
]

dynamic = ["version"]

[project.scripts]
flywheel-cli = "safari_sdk.flywheel.flywheel_cli:cli_main"  # 'flywheel-cli' will be installed as a command

[project.urls]
homepage = "https://deepmind.google/models/gemini-robotics/"
repository = "https://github.com/google-deepmind/gemini-robotics-sdk"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "immutabledict",
    "parameterized",
    "pyink",
    "pylint>=2.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
]
cc_logging = [
  "safari-sdk-logging",
]
# The scikit backend invokes CMake to build protoc and generate
# the Protobuf files for Python.
[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "safari_sdk/_version.py"

[tool.scikit-build.sdist]
# scikit_build_core uses .gitignore to exclude files from the package, so add
# any files which are excluded from git but *included* in the pip package here.
include = ["safari_sdk/revision_info.txt", "safari_sdk/**/*_pb2.py"]

[tool.scikit-build.wheel]
# Explicitly list the package directory so scikit-build-core includes the Python
# source files alongside the CMake-installed proto files. Auto-discovery fails
# here because safari_sdk uses PEP 420 implicit namespace packages (no
# __init__.py at the top level).
packages = ["safari_sdk"]
exclude = ["**/*_test.py", "**/*_test.cc"]

[tool.pyink]
# Formatting configuration to follow Google style-guide
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
python_files = ["*_test.py"]
# Use asyncio for async tests (eg safari_sdk/agent/framework/event_bus/event_stream_handler_test.py).
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

